# hack_the_6ix

./: .env.example  .gitignore  README.md
api/: main.py  requirements.txt
api/app/: auth.py  climate_extremes.py  geocode.py  main.py  mongo.py  renders.py  sites.py  stay22.py  storage.py
api/app/agents/: ai_energy.py  chat.py  llm.py  (+7 more)
api/scripts/: gen_renders.py
api/tests/: test_ai_energy.py  test_auth.py  test_briefing.py  test_climate.py  test_compliance_engine.py  test_renders_prompt.py  test_storage_list.py
model/: friction.md  pyproject.toml
model/innsight_model/: __init__.py  benchmarks.py  friction.py  load_profiles.py  memo.py  sim.py
model/scripts/: make_validation.py
model/tests/: test_memo.py  test_sim.py  test_smoke.py
scripts/: sync-web-env.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: agent-briefing-panel.tsx  chat-panel.tsx  compliance-panel.tsx  design-panel.tsx  landing.tsx  load-chart.tsx  location-search.tsx  market-pulse.tsx  memo-dual-load-chart.tsx  memo-view.tsx  past-runs-panel.tsx  physics-log.tsx  pixel-viewport.tsx  profiles-panel.tsx  render-panel.tsx  sign-in-prompt.tsx  site-map.tsx  stress-view.tsx  top-bar.tsx  voice-controller.tsx
web/lib/: api.ts  auth0-client.ts  auth0-shared.ts  building-mesh.ts  candidate-sites.ts  flags.ts  geocode.ts  maplibre-three-layer.ts  scenarios.ts  site.ts  types.ts  use-auth.ts
web/public/: demo.webm
web/scripts/: capture-landing-hero.cjs  demo-smoke.cjs  landing-shot.cjs  qa-shot.cjs  record-demo.cjs
(+9 files in other folders)
