[project]
name = "innsight-model"
version = "0.1.0"
description = "INNSIGHT benchmark library and deterministic hospitality stress-test engine"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["innsight_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
